--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+stable_key.json
+
 # User-specific files
 *.rsuser
 *.suo
