Setup the firebase in the Class Library

--- a/Stable Lib/Stable Lib.csproj
+++ b/Stable Lib/Stable Lib.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Stable_Lib</RootNamespace>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,11 +11,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="stable_key.json" />
+    <EmbeddedResource Include="stable_key.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="2.0.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
