--- a/Stable Frontend/Stable Frontend.csproj
+++ b/Stable Frontend/Stable Frontend.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="2.0.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
