Added test project and first few models
Added the announcement model and the IFirestoreSerializable that all firestore objects should implement;
Added a test project that will run tests from StableLib

--- a/Stable Lib/Stable Lib.csproj
+++ b/Stable Lib/Stable Lib.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Stable_Lib</RootNamespace>
-    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +18,10 @@
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="2.0.0" />
     <PackageReference Include="Google.Cloud.Firestore" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Handlers" />
   </ItemGroup>
 
 </Project>
