Added the javascript files for Firebase authentication

--- a/Stable Lib/Stable Lib.csproj
+++ b/Stable Lib/Stable Lib.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="2.0.0" />
+    <PackageReference Include="FirebaseAuthentication.net" Version="3.6.0" />
     <PackageReference Include="Google.Cloud.Firestore" Version="2.3.0" />
   </ItemGroup>
 
